# unisamp

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  compute_kappa.smt2  old_plot_frequencies.py  plot_frequency_distribution.py  pyproject.toml  samples.txt  setup.py  test.py  time_and_plot.py  time_and_plot.sh  unisampConfig.cmake.in  vcpkg-configuration.json  vcpkg.json
.github/workflows/: build.yml
benchmarks/: test.cnf
experiments/: plot_frequency_distribution.py  time_and_plot.sh  timing_plot_stats.csv
experiments/benchmarks/: 01B-4.cnf.gz.no_w.cnf  02A-3.cnf.gz.no_w.cnf  README.md  dummy.cnf  dummy1.cnf
experiments/data/comparison/optimised/guidance service/: timing_plot_stats.csv
experiments/data/comparison/optimised/login service/: timing_plot_stats.csv
experiments/data/comparison/original/: timing_plot_stats.csv
experiments/data/optimised/guidance service/: timing_plot_stats.csv
experiments/data/slowdown/no_reset/dummy/: timing_plot_stats.csv
experiments/data/slowdown/no_reset/guidance service/: timing_plot_stats.csv
experiments/data/slowdown/no_reset/login service/: timing_plot_stats.csv
experiments/data/slowdown/reset_100_samples/dummy/: timing_plot_stats.csv
experiments/old/: old_plot_frequencies.py  plot_frequency_distribution.py  time_and_plot.py
experiments/results/: analyse_performance.py  plot_results.py  results_new.csv  results_old.csv
experiments/scaling/: timing_plot_stats.csv
experiments/time_and_plot/: README.md  pyproject.toml
experiments/time_and_plot/time_and_plot/: config.py  console.py  main.py  plotter.py  results.py  runner.py  utils.py
experiments/time_and_plot/time_and_plot/tui/: app.py  messages.py  state.py
html/: index.html
python/: README.md
python/src/: GitSHA1.cpp  pyunigen.cpp  pyunisamp.cpp
python/tests/: test_pyunisamp.py
scripts/: build_emscripten.sh
scripts/build_scripts/: build_norm.sh
src/: CMakeLists.txt  GitSHA1.cpp.in  GitSHA1.h  config.h  main.cpp  prob_measures.hpp  sampler.cpp  sampler.h  sub_prob_measure.hpp  sub_prob_measures.hpp  time_mem.h  unigen.cpp  unigen.h  unisamp.cpp  unisamp.h
vcpkg_overlay_ports/approxmc/: portfile.cmake  use_vcpkg_deps.patch  vcpkg.json
vcpkg_overlay_ports/arjun/: portfile.cmake  use_vcpkg_deps.patch  vcpkg.json
vcpkg_overlay_ports/cadiback/: changes.patch  portfile.cmake  use_vcpkg_deps.patch  vcpkg.json
vcpkg_overlay_ports/cadical/: portfile.cmake  vcpkg.json
vcpkg_overlay_ports/cryptominisat/: changes.patch  portfile.cmake  use_vcpkg_deps.patch  vcpkg.json
vcpkg_overlay_ports/eigen3/: portfile.cmake
vcpkg_overlay_ports/gmp/: gmp-gcc-15.patch  portfile.cmake
vcpkg_overlay_ports/sbva/: cassert.patch  portfile.cmake  use_vcpkg_deps.patch  vcpkg.json
vcpkg_ports/cadiback/: portfile.cmake  vcpkg.json
vcpkg_ports/cadical/: portfile.cmake
vcpkg_ports/cryptominisat/: portfile.cmake  vcpkg.json
vcpkg_ports/gmp/: gmp-gcc-15.patch
vcpkg_ports/sbva/: portfile.cmake
