[tool.poetry]
name = "time-and-plot"
version = "0.1.0"
description = "A script to time a command with various input values and display the results."
authors = ["Joe <joewatt95@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.11"
rich = "^14.1"
textual = "^6.0"

[tool.poetry.group.plot.dependencies]
matplotlib = "^3.10"
numpy = "^2.3"

[tool.poetry.group.dev.dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
